--- a/CleanArchMvc.WebUI/Views/Shared/_Layout.cshtml
+++ b/CleanArchMvc.WebUI/Views/Shared/_Layout.cshtml
@@ -31,9 +31,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                     </ul>
-                    @*<ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto">
                         @await Html.PartialAsync("_LoginPartial")
-                    </ul>*@
+                    </ul>
                 </div>
             </div>
         </nav>
